# Camera-Sensing-ESP32

./: .gitignore  README.md
ESP32/main/: CMakeLists.txt  Kconfig.projbuild  app_main.c
main/: CMakeLists.txt  Kconfig.projbuild  app_main.c
receiver/: mqtt_receiver.py
